--- a/crop.ipynb
+++ b/crop.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Crop Fertilizer Recomendations System using ML\n"
+    "#Crop Fertilizer Recommendations System using ML\n"
    ]
   },
   {
