--- a/crop.ipynb
+++ b/crop.ipynb
@@ -2088,73 +2088,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prediction\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "def crop_rec(N, P, K, temp, hum, ph, rain):\n",
-    "    features = np.array([[N, P, K, temp, hum, ph, rain]])\n",
+    "    features = pd.DataFrame([[N, P, K, temp, hum, ph, rain]], \n",
+    "                            columns=['N', 'P', 'K', 'temperature', 'humidity', 'ph', 'rainfall'])\n",
     "    transformed_features = scaler.transform(features)\n",
-    "    predection = dtc.predict(transformed_features).reshape(1,-1)\n",
-    "    print(predection)\n",
+    "    prediction = dtc.predict(transformed_features)\n",
     "    crop_dict = {\n",
-    "        0:'rice',\n",
-    "    1:'maize',\n",
-    "    2:'chickpea',\n",
-    "    3:'kidneybeans',\n",
-    "    4:'pigeonpeas',\n",
-    "    5:'mothbeans',\n",
-    "    6:'mungbean',\n",
-    "    7:'blackgram',\n",
-    "    8:'lentil',\n",
-    "    9:'pomegranate',\n",
-    "    10:'banana',\n",
-    "    11:'mango',\n",
-    "    12:'grapes',\n",
-    "    13:'watermelon',\n",
-    "    14:'muskmelon',\n",
-    "    15:'apple',\n",
-    "    16:'orange',\n",
-    "    17:'papaya',\n",
-    "    18:'coconut',\n",
-    "    19:'cotton',\n",
-    "    20:'jute',\n",
-    "    21:'coffee'\n",
+    "        0: 'rice',\n",
+    "        1: 'maize',\n",
+    "        2: 'chickpea',\n",
+    "        3: 'kidneybeans',\n",
+    "        4: 'pigeonpeas',\n",
+    "        5: 'mothbeans',\n",
+    "        6: 'mungbean',\n",
+    "        7: 'blackgram',\n",
+    "        8: 'lentil',\n",
+    "        9: 'pomegranate',\n",
+    "        10: 'banana',\n",
+    "        11: 'mango',\n",
+    "        12: 'grapes',\n",
+    "        13: 'watermelon',\n",
+    "        14: 'muskmelon',\n",
+    "        15: 'apple',\n",
+    "        16: 'orange',\n",
+    "        17: 'papaya',\n",
+    "        18: 'coconut',\n",
+    "        19: 'cotton',\n",
+    "        20: 'jute',\n",
+    "        21: 'coffee'\n",
     "    }\n",
-    "    crop = [crop_dict[i] for i in predection[0]]\n",
-    "\n",
-    "    return f\"{crop} is a best crop to grow in farm.\"\n"
+    "    \n",
+    "    crop = crop_dict[prediction[0]]\n",
+    "    \n",
+    "    return f\"{crop} is the best crop to grow on the farm.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[17]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Admin\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "\"['papaya'] is a best crop to grow in farm.\""
+       "'papaya is the best crop to grow on the farm.'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2170,13 +2157,6 @@
     "rain = 205\n",
     "crop_rec(N, p, k, temp, humid, ph, rain)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
